h2. 0.8.6 (unreleased)

* Clearance features capitalization should match view text (Bobby Wilson)

h2. 0.8.5 (01/20/2009)

* replaced routing hack with Clearance::Routes.draw(map) to give
more control to the application developer. (Dan Croak)
* removed attr_accessible from Clearance::User. (Dan Croak)
* fixed bug in password reset feature. (Ben Orenstein, Dan Croak)
* use Jeweler for gemming. (Dan Croak)
* remove dependency on root_path, use '/' instead. (Dan Croak)
* use Clearance.configure block to set mailer sender instead of
DO_NOT_REPLY constant. (Dan Croak)

h2. 0.8.4 (12/08/2009)

* [#48] remove unnecessary require 'factory_girl' in generator (Dan Croak)
* reference gemcutter (not github) as the gem source in README (Dan Croak)
* add IRC, rdoc.info links to README (Dan Croak)
* move user confirmation email trigger into model (Chad Pytel)

h2. 0.8.3 (09/21/2009)

* [#27] remove class_eval in Clearance::Authentication. (Anuj Dutta)
* Avoid possible collisions in the remember me token (Joe Ferris)

h2. 0.8.2 (09/01/2009)

* current_user= accessor method. (Joe Ferris, Josh Clayton)
* set current_user in sign_in. (Jon Yurek)

h2. 0.8.1 (08/31/2009)

* Removed unnecessary remember_token_expires_at column and the
remember? and forget_me! user instance methods. (Dan Croak)

h2. 0.8.0 (08/31/2009)

* Always remember me. Replaced session-and-remember-me authentication with
always using a cookie with a long timeout. (Dan Croak)
* Documented Clearance::Authentication with YARD. (Dan Croak)
* Documented Clearance::User with YARD. (Dan Croak)

h2. 0.7.0 (08/04/2009)

* Redirect signed in user who clicks confirmation link again. (Dan Croak)
* Redirect signed out user who clicks confirmation link again. (Dan Croak)
* Added signed_out? convenience method for controllers, helpers, views. (Dan
Croak)
* Added clearance_views generator. By default, creates formtastic views which
pass all tests and features. (Dan Croak)

h2. 0.6.9 (07/04/2009)
