@@ -1,8 +1,8 @@
 class Clearance::UsersController < ApplicationController
   unloadable
 
-  before_filter :redirect_to_root, :only => [:new, :create], :if => :signed_in?
   skip_before_filter :authenticate, :only => [:new, :create]
+  before_filter :redirect_to_root,  :only => [:new, :create], :if => :signed_in?
   filter_parameter_logging :password
 
   def new
